# nexo-operating-model

./: .env.example  .gitattributes  .gitignore  Makefile  OPERATING-MODEL.md  README.md  REUSE_NOTES.md  SECURITY.md  __init__.py  agent_base.py  analisis_cartera_agent.py  app.py  cartera_core.py  cli.py  cobranza_agent.py  cross_sell_agent.py  llm.py  make.ps1  nexo_orchestrator.py  paths.py  pyproject.toml  reactivacion_agent.py  renovaciones_agent.py  report_metrics.py  requirements-v3.txt  requirements.txt  review.py  schema.py  shared_state.py  streamlit_app.py
.claude/: launch.json
.streamlit/: config.toml
data/: __init__.py  cartera_demo.xlsx  generate_synthetic_cartera.py
docs/: CARGA_DE_DATOS.md  CUTOVER.md  DEPLOYMENT.md
docs/superseded/: README.md
evals/: __init__.py  run_evals.py
nexo_os/: __init__.py  audit.py  auth.py  cli.py  config.py  execution.py  logging.py  orchestrator.py  pii.py  reliability.py  review.py  state.py  strings_es.py
nexo_os/agents/: base.py  cartera_agent.py  cobranza_agent.py  comercial_agent.py  comisiones_agent.py  narrate.py  renovaciones_agent.py  scoring.py
nexo_os/core/: aging.py  cartera.py  cobranza.py  comercial.py  comisiones.py  money.py  renovaciones.py
nexo_os/dashboard/: actions.py  app.py  demo.py  views.py
nexo_os/data/: ingest.py  repository.py  snapshot_repository.py  store.py  template.py
nexo_os/data/schema/: DATA_MODEL.md  models.py  schema.sql
nexo_os/data/synthetic/: GROUND_TRUTH.md  __init__.py  cartera_actual.xlsx  cartera_anterior.xlsx  cartera_sin_siniestros.xlsx  generate.py
nexo_os/data/synthetic/broken/: bad_enum.xlsx  broken_fk.xlsx  duplicate_pk.xlsx  missing_sheet.xlsx  negative_amount.xlsx
nexo_os/evals/: run_evals.py
nexo_os/tests/: conftest.py  test_agents.py  test_auth.py  test_core_golden.py  test_core_units.py  test_governance.py  test_ingest.py  test_orchestrator.py  test_repository.py  test_scaffold.py  test_template.py
outputs/: .gitkeep  __init__.py  excel_writer.py
tests/: test_agents.py  test_cartera_core.py  test_excel_writer.py  test_orchestrator.py  test_report_metrics.py  test_spine.py
